Cleaned up the notebook.

--- a/zorkalike.ipynb
+++ b/zorkalike.ipynb
@@ -2,46 +2,64 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Player(object):\n",
+    "class Player:\n",
     "    def __init__(self):\n",
     "        self.inventory = {}\n",
-    "        self.alive = True"
+    "        self.alive = True\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return 'Player(alive={}, inventory={})'.format(self.alive, self.inventory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Room(object):\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Room:\n",
     "    def __init__(self,\n",
-    "                 description,\n",
     "                 contents=None):\n",
     "        self.doors = {}\n",
-    "        self.description = description\n",
     "        self.contents = dict(contents) if contents else None\n",
     "\n",
     "    def process_command(self, command, player):\n",
     "        \"\"\"Process room-specific commands.\n",
-    "\n",
-    "        This is called if the command is not recognized by the standard command\n",
-    "        processor. It returns true of the command is handled by the room, or\n",
-    "        False otherwise.\n",
-    "\n",
-    "        By default this function does nothing. Use subclasses to add special\n",
-    "        command handling.\n",
     "        \"\"\"\n",
-    "        return False"
+    "        return False\n",
+    "    \n",
+    "    @property\n",
+    "    @abstractmethod\n",
+    "    def description(self):\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StaticRoom(Room):\n",
+    "    \"\"\"A room with a static description\"\"\"\n",
+    "    def __init__(self, description, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self._description = description\n",
+    "        \n",
+    "    @property\n",
+    "    def description(self):\n",
+    "        return self._description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +68,12 @@
     "    \"\"\"\n",
     "    def __init__(self, count):\n",
     "        super(LlamaRoom, self).__init__(\n",
-    "            '',\n",
     "            contents={'llama': count})\n",
-    "        self._update_description()\n",
     "\n",
-    "    def _update_description(self):\n",
-    "        self.description = \\\n",
-    "            'This room is filled with %s serene llamas.' % self.contents['llama']\n",
+    "    @property\n",
+    "    def description(self):\n",
+    "        return 'This room is filled with {} serene llamas.'.format(\n",
+    "            self.contents['llama'])\n",
     "\n",
     "    def process_command(self, command, player):\n",
     "        if command == 'pet llama':\n",
@@ -65,7 +82,6 @@
     "            else:\n",
     "                print('The llama looks pleased and then gallops off, its mission in this dimension completed.')\n",
     "                self.contents['llama'] -= 1\n",
-    "                self._update_description()\n",
     "            return True\n",
     "\n",
     "        return False"
@@ -73,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BearRoom(Room):\n",
+    "class BearRoom(StaticRoom):\n",
     "    \"\"\"A room containing a bear.\n",
     "    \"\"\"\n",
     "    def __init__(self):\n",
     "        super(BearRoom, self).__init__(\n",
-    "            'This rooms contains a grumpy looking bear.',\n",
+    "            description='This rooms contains a grumpy looking bear.',\n",
     "            contents={'bear': 1})\n",
     "\n",
     "    def process_command(self, command, player):\n",
@@ -95,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Game(object):\n",
+    "class Game:\n",
     "    def __init__(self, current_room, player):\n",
     "        self.current_room = current_room\n",
     "        self.player = player"
@@ -107,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_game():\n",
     "    \"\"\"Construct a game object.\n",
     "    \"\"\"\n",
-    "    start_room = Room('You are in a dark room.')\n",
+    "    start_room = StaticRoom('You are in a dark room.')\n",
     "    llama_room = LlamaRoom(42)\n",
     "    bear_room = BearRoom()\n",
     "\n",
@@ -173,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +266,13 @@
    "source": [
     "main_loop(make_game())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
