Moved notebooks into directory. Added v01 code.

--- a/notebooks/zorkalike.ipynb
+++ b/notebooks/zorkalike.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "from abc import ABC, abstractmethod\n",
     "\n",
-    "class Room:\n",
+    "class Room(ABC):\n",
     "    def __init__(self,\n",
     "                 contents=None):\n",
     "        self.doors = {}\n",
