Added explanatory text to the notebook

--- a/notebooks/zorkalike.ipynb
+++ b/notebooks/zorkalike.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zorkalike\n",
+    "## Classes\n",
+    "### The basics\n",
+    "\n",
+    "First we'll define a new class using the `class` keyword."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -13,6 +24,36 @@
     "    \n",
     "    def __repr__(self):\n",
     "        return 'Player(alive={}, inventory={})'.format(self.alive, self.inventory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Game` is a simple class that tracks a `Player` and the current room."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Game:\n",
+    "    def __init__(self, current_room, player):\n",
+    "        self.current_room = current_room\n",
+    "        self.player = player"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An abstract class\n",
+    "\n",
+    "This next class is *abstract* and can't be instantiated directly. \n",
+    "\n",
+    "Note also that it has a *property*."
    ]
   },
   {
@@ -41,6 +82,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inheritance\n",
+    "\n",
+    "So let's create a simple `Room` subclass which has a simple, static description."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -55,6 +105,13 @@
     "    @property\n",
     "    def description(self):\n",
     "        return self._description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This next `Room` subclass has a dynamic description, overriding the `description` property. It also does some command processing."
    ]
   },
   {
@@ -88,6 +145,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `BearRoom` inherits from `StaticRoom` since it has a simple description, but it also does some command processing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -110,15 +174,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Game:\n",
-    "    def __init__(self, current_room, player):\n",
-    "        self.current_room = current_room\n",
-    "        self.player = player"
+    "## Enumerations\n",
+    "\n",
+    "Python doesn't have language-level support for enumerations, but it has a powerful modules in the standard library, `enum`, which provides them."
    ]
   },
   {
@@ -137,6 +198,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comprehensions and exceptions\n",
+    "\n",
+    "`connect` makes it easy to attach rooms to one another, but it has a fairly sophisticated implementation. First, `DIR_COMPLEMENTS` uses a *dictionary comprehension* and `itertools` to build a map of cardinal directions to their opposites.\n",
+    "\n",
+    "`connect` itself then verifies that the rooms can be connected, throwing *exceptions* if the doors are already occupied."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -144,7 +216,7 @@
    "source": [
     "from itertools import chain, permutations\n",
     "\n",
-    "DIRECTIONS = {\n",
+    "DIR_COMPLEMENTS = {\n",
     "    from_dir: start_dir\n",
     "    for from_dir, start_dir\n",
     "    in chain(permutations((Direction.North, Direction.South)), \n",
@@ -152,7 +224,7 @@
     "}\n",
     "\n",
     "def connect(room_from: Room, room_to: Room, dir_from: Direction):\n",
-    "    dir_to = DIRECTIONS[dir_from]\n",
+    "    dir_to = DIR_COMPLEMENTS[dir_from]\n",
     "\n",
     "    if room_from.doors.get(dir_from) is not None:\n",
     "        raise ValueError(\n",
@@ -165,6 +237,15 @@
     "        \n",
     "    room_from.doors[dir_from] = room_to\n",
     "    room_to.doors[dir_to] = room_from"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Game logic\n",
+    "\n",
+    "`make_game` provides a convenient way to construct a `Game` with a map and `Player`."
    ]
   },
   {
@@ -185,6 +266,13 @@
     "\n",
     "    game = Game(start_room, Player())\n",
     "    return game"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a handful of commands that the player can run from any room. `process_standard_commands` handles those."
    ]
   },
   {
@@ -222,6 +310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`print_room_details` tells the user about the room they're in. We print this whenever the user enters a new room."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -233,6 +328,13 @@
     "    print(room.description)\n",
     "    for direction in room.doors:\n",
     "        print('There is a door to the {}'.format(direction.value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, `main_loop` accepts user input and processes the commands using both the current room and `process_standard_commands`."
    ]
   },
   {
@@ -256,6 +358,15 @@
     "            or game.current_room.process_command(command, game.player)\n",
     "        if not handled:\n",
     "            print('unrecognized command!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's play!\n",
+    "\n",
+    "Finally we can run the game loop using our game."
    ]
   },
   {
