Fixed stupid bug that was through all code examples.

--- a/notebooks/zorkalike.ipynb
+++ b/notebooks/zorkalike.ipynb
@@ -68,7 +68,7 @@
     "    def __init__(self,\n",
     "                 contents=None):\n",
     "        self.doors = {}\n",
-    "        self.contents = dict(contents) if contents else None\n",
+    "        self.contents = dict(contents) if contents else {}\n",
     "\n",
     "    def process_command(self, command, player):\n",
     "        \"\"\"Process room-specific commands.\n",
@@ -179,7 +179,7 @@
    "source": [
     "## Enumerations\n",
     "\n",
-    "Python doesn't have language-level support for enumerations, but it has a powerful modules in the standard library, `enum`, which provides them."
+    "Python doesn't have language-level support for enumerations, but it has a powerful module in the standard library, `enum`, which provides them."
    ]
   },
   {
@@ -377,13 +377,6 @@
    "source": [
     "main_loop(make_game())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
